--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <script src="index.js"></script>
 
-    <footer>Follow </footer>
+    <footer style="color:white">Follow Me For more</footer>
 
 </body>
 
